test/testdata/classes/methods/missing_1_arg_error.lox
class Foo {
  add(a, b) {
    print a + b;
  }
}

Foo().add(1); // error: Foo.add() accepts 2 arguments but 1 was given
